@@ -13,6 +13,7 @@ a row plugin to explode the view results into calendar day items, and a style pl
 Version 7.x-3.0-alpha2
 ======================
 
+- Issue #1254916 by larsdesigns, calendar-overlap.css is not complient with Drupal Coding Standards
 - Add update hook to remove old style calendar legend blocks from system.
 - Issue #742146, Add option to remove X-WR-CALNAME if VEVENT is not a feed.
 - Add option to change method from PUBLISH to REQUEST in VCALENDAR.
